fix alignment of autocomplete label

--- a/register/static/register/scss/_custom.scss
+++ b/register/static/register/scss/_custom.scss
@@ -159,4 +159,8 @@ body.qrcode {
     input[name="address-postal_code"] {
         width: 30%;
     }
+
+    #address-autocomplete-container {
+        margin-top: 8px;
+    }
 }
